plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

dependencies {
    api 'com.google.code.gson:gson:2.9.1'
    implementation 'com.kohlschutter.junixsocket:junixsocket-core:2.11.1'
    compileOnly 'org.projectlombok:lombok:1.18.48'
    annotationProcessor 'org.projectlombok:lombok:1.18.48'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.4.0'
}

java {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
    withSourcesJar()
    withJavadocJar()
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)

            pom {
                name = 'discord-game-sdk4j'
                description = "Java bindings for Discord's Game SDK"
                url = 'https://github.com/JnCrMx/discord-game-sdk4j'
                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://raw.githubusercontent.com/JnCrMx/discord-game-sdk4j/master/LICENSE'
                        distribution = 'repo'
                    }
                }
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    if (JavaVersion.current().isJava9Compatible()) {
        options.release = 8
    }
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    exclude 'de/jcm/discordgamesdk/impl/**'
}
